--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "author": "Vladyslav Rzaiev <vlad.rzaev@gmail.com>",
   "license": "ISC",
   "dependencies": {
+    "accordion-js": "^3.4.0",
     "vite-plugin-full-reload": "^1.2.0",
     "vite-plugin-html-inject": "^1.1.2"
   }
